2009-06-11 Pierre Wieser <pwieser@trychlos.org>

	* src/common/nact-pivot.c:
	* src/common/nact-pivot.h: Fix comment typo.

	* src/nact/nact.c:
	* src/nact/nact.h:
	Externalize main function in nact-main.c.
	init_dialog becomes public as nact_init_dialog.

	* src/nact/nact-main.c: New file.

	* src/nact/Makefile.am: Updated accordingly.

2009-06-10 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac:
	Bump version number.
	Update required Glib version to make sure to have GIO.

	* src/common/nact-action-profile.c (nact_action_profile_free):
	Fix disallocation of the profile by calling g_object_unref.

	* src/common/nact-action-profile.c:
	Remove all gnome-vfs code.

	* src/plugin/nautilus-actions.c:
	Move gnome_vfs_init call to nact_action_profile_parse_parameters.
	Remove useless include files.

2009-06-09 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Bump version number for 1.11.0 release.

	* src/common/nact-action.c:
	* src/common/nact-action.h
	(nact_action_get_profile_ids, nact_action_free_profile_ids,
	 nact_action_has_profile, nact_action_get_profile,
	 nact_action_free_profile):
	Remove functions and cleanup the code.

	* src/common/nact-action-profile.c:
	* src/common/nact-action-profile.h
	(nact_action_profile_load): Remove function and cleanup the code.

	* src/common/nact-gconf.c:
	* src/common/nact-iio-provider.c:
	Cleanup the code, adding documentation to public functions.

	* src/common/nact-object.c:
	* src/common/nact-object.h
	(nact_object_empty_property): Remove function and cleanup the code.

	* src/common/nact-pivot.c:
	* src/common/nact-pivot.h
	(nact_pivot_get_action): Remove function and cleanup the code.

	* src/common/nact-uti.c:
	* src/common/nact-uti.h (nactuti_free_object_list): Remove function.

	* src/plugin/nautilus-actions.c:
	The plugin now uses the new object hierarchy to handle menu items.
	Fix #580378 (context menu doesn't update) reported by James Campos.
	Cleanup the code.

	* src/plugin/nautilus-actions-test.c: