@@ -1,0 +1,155 @@
+/*
+ * Nautilus Actions
+ * A Nautilus extension which offers configurable context menu actions.
+ *
+ * Copyright (C) 2005 The GNOME Foundation
+ * Copyright (C) 2006, 2007, 2008 Frederic Ruaudel and others (see AUTHORS)
+ * Copyright (C) 2009 Pierre Wieser and others (see AUTHORS)
+ *
+ * This Program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
+ * the License, or (at your option) any later version.
+ *
+ * This Program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this Library; see the file COPYING.  If not,
+ * write to the Free Software Foundation, Inc., 59 Temple Place,
+ * Suite 330, Boston, MA 02111-1307, USA.
+ *
+ * Authors:
+ *   Frederic Ruaudel <grumz@grumz.net>
+ *   Rodrigo Moya <rodrigo@gnome-db.org>
+ *   Pierre Wieser <pwieser@trychlos.org>
+ *   ... and many others (see AUTHORS)
+ */
+
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
+#include "nact-application.h"
+
+/* private class data
+ */
+struct NactApplicationClassPrivate {
+};
+
+/* private instance data
+ */
+struct NactApplicationPrivate {
+	gboolean dispose_has_run;
+};
+
+static GObjectClass *st_parent_class = NULL;
+
+static GType register_type( void );
+static void  class_init( NactApplicationClass *klass );
+static void  instance_init( GTypeInstance *instance, gpointer klass );
+static void  instance_dispose( GObject *application );
+static void  instance_finalize( GObject *application );
+
+GType
+nact_application_get_type( void )
+{
+	static GType application_type = 0;
+
+	if( !application_type ){
+		application_type = register_type();
+	}
+
+	return( application_type );
+}
+
+static GType
+register_type( void )
+{
+	static GTypeInfo info = {
+		sizeof( NactApplicationClass ),
+		( GBaseInitFunc ) NULL,
+		( GBaseFinalizeFunc ) NULL,
+		( GClassInitFunc ) class_init,
+		NULL,
+		NULL,
+		sizeof( NactApplication ),
+		0,
+		( GInstanceInitFunc ) instance_init
+	};
+
+	return( g_type_register_static( G_TYPE_OBJECT, "NactApplication", &info, 0 ));
+}
+
+static void
+class_init( NactApplicationClass *klass )
+{
+	static const gchar *thisfn = "nact_application_class_init";
+	g_debug( "%s: klass=%p", thisfn, klass );
+
+	st_parent_class = g_type_class_peek_parent( klass );
+
+	GObjectClass *application_class = G_OBJECT_CLASS( klass );
+	application_class->dispose = instance_dispose;
+	application_class->finalize = instance_finalize;
+
+	klass->private = g_new0( NactApplicationClassPrivate, 1 );
+}
+
+static void
+instance_init( GTypeInstance *instance, gpointer klass )
+{
+	static const gchar *thisfn = "nact_application_instance_init";
+	g_debug( "%s: instance=%p, klass=%p", thisfn, instance, klass );
+
+	g_assert( NACT_IS_APPLICATION( instance ));
+	NactApplication *self = NACT_APPLICATION( instance );
+
+	self->private = g_new0( NactApplicationPrivate, 1 );
+
+	self->private->dispose_has_run = FALSE;
+}
+
+static void
+instance_dispose( GObject *application )
+{
+	static const gchar *thisfn = "nact_application_instance_dispose";
+	g_debug( "%s: application=%p", thisfn, application );
+
+	g_assert( NACT_IS_APPLICATION( application ));
+	NactApplication *self = NACT_APPLICATION( application );
+
+	if( !self->private->dispose_has_run ){
+
+		self->private->dispose_has_run = TRUE;
+
+		/* chain up to the parent class */
+		G_OBJECT_CLASS( st_parent_class )->dispose( application );
+	}
+}
+
+static void
+instance_finalize( GObject *application )
+{
+	static const gchar *thisfn = "nact_application_instance_finalize";
+	g_debug( "%s: application=%p", thisfn, application );
+
+	g_assert( NACT_IS_APPLICATION( application ));
+	/*NactApplication *self = ( NactApplication * ) application;*/
+
+	/* chain call to parent class */
+	if( st_parent_class->finalize ){
+		G_OBJECT_CLASS( st_parent_class )->finalize( application );
+	}
+}
+
+/**
+ * Returns a newly allocated NactApplication object.
+ */
+NactApplication *
+nact_application_new( void )
+{
+	return( g_object_new( NACT_APPLICATION_TYPE, NULL ));
+}
